# automated-tool-compliance-scanning

./: .cursorrules  .gitignore  BMAD-配置说明.md  DATABASE_MIGRATION_COMPLETE.md  Dockerfile  GLM_API_ANALYSIS.md  GLM_API_ISSUE_SUMMARY.md  Git推送说明.md  IMPROVEMENT_SUMMARY.md  README.md  SCAN_RESULT_SIMPLIFIED.md  docker-compose.yml  pyproject.toml  requirements.txt  run.bat  run.sh  start_server.py
.github/workflows/: codeql.yml  deploy-aliyun.yml
_bmad-output/implementation-artifacts/: implementation-summary.md  story-1.1-completed.md  story-1.2-completed.md  story-1.3-completed.md  story-1.4-completed.md
_bmad-output/planning-artifacts/: README.md  epics.md  product-brief.md  user demand.ini
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_memory/: config.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/cis/: config.yaml
_bmad/core/: config.yaml
docs/: architecture.md  compliance-scanning-process.md  config-example.yaml  delivery-self-check.md  deploy-aliyun.md  maintainability-analysis.md  performance-optimization.md  prd.md  project-context.md
docs/archive/: ALTERNATIVE_TOOLS_IMPROVEMENT.md  BMAD-安装完成.md  FIX_SUMMARY.md  KNOWLEDGE_BASE_FEATURE_SUMMARY.md  REPORT_FOCUS_UPDATE.md  SCAN_RESULT_ENHANCEMENT.md  SETUP_COMPLETE.md  TEST_SCAN.md  TOS_LICENSE_ANALYSIS_UPDATE.md  (+1 more)
scripts/: init_knowledge_base.py  migrate_database.py
src/: __init__.py  config.py  database.py  db_init.py  logger.py  main.py  models.py  schemas.py
tests/: conftest.py  test_api_knowledge_base.py  test_api_scan.py  test_api_tools.py  test_config.py  test_config_integration.py  test_database.py  test_logger.py  test_main.py  test_migration.py  test_service_knowledge_base.py  test_service_tool.py
(+23 files in other folders)
