[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tool-compliance-scanning-agent"
version = "0.1.0"
description = "工具合规扫描 Agent 服务"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "httpx==0.25.1",
    "requests==2.32.4",
    "pyyaml==6.0.1",
    "pydantic>=2.5.0,<3.0.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.23",
    "aiosqlite==0.19.0",
    "loguru==0.7.2",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "black==23.11.0",
    "flake8==6.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
